--- a/src/component/header/header_bottom/dropdown.css
+++ b/src/component/header/header_bottom/dropdown.css
@@ -1,4 +1,4 @@
-.dropdown button
+/* .dropdown button
 {
     border: none;
     background-color: #e4c8cd;
@@ -39,4 +39,52 @@ margin: 0;
     background-color: #f8f8f8;
 }
 
-
+ */
+ .dropbtn {
+    border: none;
+    background-color: #e4c8cd;
+    font-family: 'Comic Sans MS', cursive; 
+    font-size: 24px; 
+    font-weight: bold;
+    color: #40151f;
+    letter-spacing: 2px;
+    padding-top: 10px;
+    padding-bottom: 18px;
+    cursor: pointer;
+  }
+  
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #e4c8cd;
+    min-width: 250px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    font-size: 18px;
+    overflow-y: auto; 
+    transition: max-height 0.3s ease-in;
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 0;
+    text-decoration: none;
+    display: block;
+    font-size: 18px;
+    margin: 0;
+  }
+  
+  .dropdown-content a:hover {background-color: #f1f1f1}
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+  
+  .dropdown:hover .dropbtn {
+    background-color: #e4c8cd;
+  }
